plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
  jacksonVersion = '2.15.2'
  javafxVersion = '21'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'org.example.courseworkManager'
  mainClass = 'org.example.courseworkManager.Main'
}

javafx {
  version = javafxVersion
  modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing' ]
}

dependencies {
// JavaFX (redundant due to plugin but explicit for clarity)
  implementation "org.openjfx:javafx-controls:$javafxVersion"
  implementation "org.openjfx:javafx-fxml:$javafxVersion"
  implementation "org.openjfx:javafx-swing:${javafx.version}"


  // Data Handling
  implementation 'org.apache.commons:commons-csv:1.9.0'
  implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"

  // Statistics and Math
  implementation 'org.apache.commons:commons-math3:3.6.1'

  // Charting
  implementation 'org.jfree:jfreechart:1.5.3'
  implementation 'org.jfree:org.jfree.chart.fx:2.0.1'


  // Unit Testing
  testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
}

test {
  useJUnitPlatform()
  jvmArgs = ['--add-modules=javafx.controls,javafx.fxml,javafx.swing']
}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}